# BisonBot

./: .gitignore  README.md  app.py  createEmbeddings.ipynb  output_audio.webm  pyproject.toml  requirements.txt
.chainlit/: config.toml
data/chroma/: chroma.sqlite3
data/chroma/3e999707-772b-4217-ba7a-325618e2ec25/: index_metadata.pickle
data/chroma/40f98306-1943-4823-beac-a79b19422018/: index_metadata.pickle
data/chroma/e2af84a5-cfe1-4f4c-9745-fd1346678929/: index_metadata.pickle
data/search_embeddings/: chroma.sqlite3
